src/pages/messages/messages.scss
topicWithBursts {
	background: white;
	height: 100%;

	ion-spinner {
		flex-shrink: 0;
	}

	.fixed-content {
		display: none;
	}

	.scroll-content {
		overflow: hidden;
		display: flex;

		flex-direction: column;
		padding: 0;
	}

	.messages__list {
		flex: 1;
		overflow-x: hidden;
		overflow-y: scroll;

		display: flex;
		flex-direction: column;

		// ios scrolling
		-webkit-overflow-scrolling: touch;

		will-change: scroll-position;
		contain: size style layout;
	}

	.messages__list > .list {
		// ios margin bottom
		margin-bottom: 0 !important;
	}

	.messages_filler {
		flex: 1 0 auto;
	}

	.burst-seperator-date {
		color: #a0a7aa;
		margin-bottom: 22px;
	}

	.burst-seperator-update {
		color: #788286;
	}

	.burst-seperator {
		text-align: center;

		.burst-seperator-text {
			display: inline-block;
			position: relative;
			white-space: normal;
			font-size: 0.85em;

			&:before,
			&:after {
				content: "";
				position: absolute;
				height: 1.5px;
				background-color: #ebeced;
				top: 50%;
				transform: translateY(-50%);
				width: 5000px;
			}

			&:before {
				right: 100%;
				margin-right: 5px;
			}

			&:after {
				left: 100%;
				margin-left: 5px;
			}
		}
	}
}

.md {
	.messages__header-image {
		position: absolute;
		top: 50%;
		left: 0;
		transform: translateY(-50%);
	}
	.messages__header__username {
		padding-left: 24px;
	}
	.messages__header__username--no-image {
		padding-left: 0;
	}
}

.ios {
	.messages__header-image {
		position: absolute;

		// do not trust chrome on this one!
		// mobile safari does things different...
		top: calc(50% + 10px);
		right: 1em;
		transform: translateY(-50%);
	}
}

.messages__burst {
	width: 100vw;

	.label {
		display: flex;
		flex-direction: column;
	}
}

.messages__wrap {
	display: flex;
	align-content: center;
	justify-content: center;
}

.messages__time {
	flex-shrink: 0;
	flex-grow: 0;

	margin: auto;

	color: #bfc3c5;
	font-size: 0.85em;
}

.messages__wrap--file {
	padding: 0;
}

.message__file,
.message__voicemail {
	display: flex;
	min-height: 55px;
	width: 100%;

	overflow: visible;
	padding: 5px 0 5px 25px;
}

.message__voicemail {
	padding: 5px 0 5px 5px;
}

.message__voicemail__info {
	flex-wrap: nowrap !important;
}

.message__voicemail__actions {
	align-items: center;
	justify-content: center;

	display: flex;
	flex-shrink: 0;
	flex-grow: 0;

	padding-left: 6px;

	width: 30px;
	max-width: 30px;
	height: auto;
	margin-right: 12px;

	.burst--other & {
		order: 2;
		margin-right: 0;
		margin-left: 12px;
	}
}

// .message__voicemail__action {
// 	font-size: 30px;
//
// 	flex-grow: 0;
// 	flex-shrink: 0;
// }
//
// .message__voicemail__action,
// .message__voicemail__uploadSpinner {
// 	margin: 0;
// }
//
.message__voicemail__player {
	display: inline-block;
	position: relative;

	flex-wrap: nowrap;
	white-space: nowrap;

	flex-grow: 1;
}

.message__file__hexagon-wrap {
	position: absolute;

	width: 40px;

	top: 4px;
	left: -12px;

	z-index: 3;

	.border, .content {
		fill: map-get($colors, dark_grey);
	}
	svg { width: 100%; }
}

.progressIndicator {
	color: map-get($colors, dark);
	background-color: map-get($colors, dark_grey);
	.burst--me & {
		color: map-get($colors, light);
		@if $business == 1 {
			background-color: #939B9E;
		} @else {
			background-color: #79C730;
		}
	}
}

.message__file__hexagon {
	display: block;
	width: 100%;
}

// this might not work out 100% well, but using flexbox was a real pain here :/
.message__file__hexagon-icon {
	position: absolute;
	top: 50%;
	left: 50%;

	margin-top: -11px;
	margin-left: -6px;

	color: map-get($colors, light) !important;
}

.message__file__hexagon-spinner {
	position: absolute;
	top: 50%;
	left: 50%;

	margin-top: -15px;
	margin-left: -14px;

	* {
		stroke: map-get($colors, light) !important;
	}
}

.message__file__info {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: flex-start;
	width: 100%;

	.burst--me & {
		padding-left: 0;
		padding-right: 0;
	}

	.burst--other & {
		padding-left: 0;
		padding-right: 0;
	}
}

.message__file__info__size {
	white-space: nowrap;
	color: map-get($colors, border_grey);

	.burst--other & {
		color: map-get($colors, grey);
	}
}

.message__file__progress {
	position: relative;

	height: 2px;
	width: 100%;

	margin-top: 2px;
	margin-left: 0;

	.burst--me & {
		margin-right: 20px;
		background: map-get($colors, primaryDarker) !important;
	}

	.burst--other & {
		margin-right: 25px;
		background: map-get($colors, light) !important;
	}
}

.message__file__progress__bar {
	position: relative;
	height: 100%;
	transition: width 0.1s ease;
	background: map-get($colors, light);

	.burst--other & {
		background: map-get($colors, dark);
	}
}

.message__file__progress__icon {
	position: absolute;
	top: -4px;
	left: -4.5px;

	display: block;
	height: 9px;
	width: 9px;

	transition: margin 0.1s ease;
}

.message__file__progress__icon__hex {
	position: absolute;
	top: 0;
	left: 0;

	width: 100%;
	height: 100%;

	.border, .content {
		fill: map-get($colors, light);
	}

	svg {
		width: 100%;

		position: absolute;
		top: 0;
		left: 0;
	}
}

.message__file__name {
	display: inline-block;
	width: 100%;

	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.message__file__size {
	display: inline-block;

	width: 100%;
	padding-right: 5px;
	text-overflow: initial;
}

$padding-within-burst: 3px;
$bubble-padding-vertical: 9px;
$bubble-padding-horizontal: 12px;
$bubble-radius-ios: 17.5px;
$bubble-radius-android: 5px;

.messages__message {
	position: relative;
	padding: 6px;
	border-radius: $bubble-radius-ios;
	.md & { border-radius: $bubble-radius-android; } // .md seems to be an android hack.
	box-sizing: border-box;
	max-width: 75%;
	word-wrap: break-word;
	word-break: break-word;
	white-space: normal;

	> span {
		-webkit-user-select: auto;
		padding: 3px 6px;
		display: inline-block;
	}

	.burst--me & {
		margin: auto 5px $padding-within-burst 10px;
		background: $message-bubble-color;
		order: 2;
		color: #fff;

		&.sending { background: $message-sending-bubble-color; }
	}

	.burst--other & {
		margin: auto 10px $padding-within-burst 5px;
		background: map-get($colors, other_grey);
		color: map-get($colors, dark);
	}
}

message:last-of-type > div:last-of-type .messages__message {
	$outer-radius: 16px 14px;
	$inner-radius: 10px;
	$size: 20px;

	&:before {
		content: "";
		position: absolute;
		bottom: -2px;
		height: $size;
		transform: translate(0, -2px);

		.burst--me & {
			z-index: -1;
			right: -7px;
			border-right: $size solid $message-bubble-color;
			border-bottom-left-radius: $outer-radius;
		}

		.burst--other & {
			z-index: -1;
			left: -7px;
			border-left: $size solid map-get($colors, other_grey);
			border-bottom-right-radius: $outer-radius;
		}
	}

	.burst--me & {
		&.sending:before { border-color: $message-sending-bubble-color; }
	}

	&:after {
		content: "";
		position: absolute;
		bottom: -2px;
		height: $size;
		width: 26px;
		transform: translate(-30px, -2px);
		background: white;

		.burst--me & {
			z-index: 2;
			right: -56px;
			border-bottom-left-radius: $inner-radius;
		}

		.burst--other & {
			z-index: 3;
			left: 4px;
			border-bottom-right-radius: $inner-radius;
		}
	}
}

.burst--me {
	a {
		color: white;
	}

	.messages__time {
		order: 1;
		margin: auto 0 auto auto;
	}

	.message__file__memo-play-icon {
		color: map-get($colors, light);
	}

	.message__file__memo-play-icon--active {
		color: map-get($colors, blue);
	}
}

.burst--other {
	.messages__message-blocked {
		background-color: white;
		border: 1px solid $isabelline;
		color: $dark-grey;
	}
	.messages__time {
		margin: auto auto auto 0;
	}
	.messages__message-blocked:before {
		border-left: 20px solid transparent;
	}

	// .message__file {
	// 	padding: 5px 25px 5px 0;
	// }
	// .message__file__hexagon-wrap {
	// 	left: auto;
	// 	right: -10px;
	// }
	.message__file__memo-play-icon {
		color: map-get($colors, dark);
	}
	.message__file__memo-play-icon--active {
		color: map-get($colors, kelly_green);
	}
}

.messages__message--emoji-only {
	background: transparent !important;
	&:before, &:after {
		content: none !important;
	}

	font-size: 2em;
	line-height: 1.1em;

	padding-left: 0;
	padding-right: 0;
}

.messages__form {
	position: relative;

	width: 100%;

	display: flex;

	align-items: flex-end;

	padding: 5px 0;
}

.ios__messages__add-assets {
	margin: 0;
}

.ios__messages__input-wrap {
	height: auto;
	min-height: 30px !important;

	padding-left: 11.5px;

	.input-wrapper {
		align-items: flex-end;
	}
}

.ios__messages__message-input {
	.text-input {
		border: 1px solid map-get($colors, other_grey);
		border-radius: 15px;
		padding: 4px 40px 4px 10px;

		margin: 0 !important;

		height: 30px; // default height to prevent jumping

		&::-webkit-scrollbar {
			display: none;
		}
	}
}

.messages__message-input textarea {
	resize: none;
}

.ios__messages__send-message {
	position: absolute;

	// **BEFORE CHANGING:** please check the app on iOS if the values really fit!
	// Chrome does **NOT** position the element the same way iOS does.
	right: 20px;
	bottom: 8px;

	margin: 0 !important;

	border-radius: 24px !important;

	height: 24px;
	width: 40px;

	ion-icon {
		font-size: 1.3em;
	}
}

.messages__form__button-wrap {
	display: flex;

	padding-left: 11.5px;

	button {
		height: 30px !important;

		ion-icon {
			padding: 0 11.5px;
		}
	}
}

.ios__messages__recording-overlay {
	position: absolute;
	top: 50%;
	margin-top: -8px;
	width: 200px;
	left: 115px;
	color: map-get($colors, dark);
}

.ios__messages__recording-overlay--distance {
	left: 155px;
}

.ios__messages__recording__time {
	color: map-get($colors, grey);
}

.messages__send-message {
	position: relative;
}

.messageSpinner {
	animation : delayedDisplay 1200ms linear forwards;
	opacity: 0;
	visibility: hidden;
}

@keyframes delayedDisplay {
	0% { visibility: hidden; }
	80% { visibility: visible; opacity: 0 }
	100%{ visibility: visible; opacity: 1 }
}

